--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,54 +2,18 @@ name: Deploy to server
 on:
   push:
     branches:
-      - master
-
+      - step3-reusable-workflows
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    env:
-      APP_NAME: review-app
-      PSWD: ${{ secrets.PSWD }}
-      USER: ${{ secrets.USER }}
-      HOST: ${{ secrets.HOST }}
-      ARTIFACT_HOST: ${{ secrets.ARTIFACT_HOST }}
-      NGINX_PORT: 8080
-      ARTIFACT_SSH_KEY: ${{ secrets.ARTIFACT_SSH_KEY }}
-      DOCKER_IMAGE: maximillllian/review-app:${{ github.sha }}
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          push: true
-          tags: ${{ env.DOCKER_IMAGE }}
-      - name: Set up SSH
-        run: |
-          env
-          mkdir -p ~/.ssh
-          echo "${{ env.ARTIFACT_SSH_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -p 22 ${{ env.ARTIFACT_HOST }} >> ~/.ssh/known_hosts
-          sudo apt-get install sshpass
-      - name: Deploy to server
-        run: |
-          sshpass -p ${{ env.PSWD }} ssh -v -o StrictHostKeyChecking=no ${{ env.USER }}@${{ env.HOST }} <<'ENDSSH'
-          docker pull ${{ env.DOCKER_IMAGE }}
-          docker stop ${{ env.APP_NAME }}
-          docker rm ${{ env.APP_NAME }}
-          docker run --name ${{ env.APP_NAME }} \
-            -e VIRTUAL_HOST=${{ env.ARTIFACT_HOST }} \
-            -e VIRTUAL_PORT=8080 \
-            --volume /var/run/docker.sock:/var/run/docker.sock \
-            -dit ${{ env.DOCKER_IMAGE }}
-          ENDSSH
+  deploy:
+    uses: ./.github/workflows/reusable_deploy.yaml
+    with:
+      container_name: black-lotos-prod
+    secrets: 
+        HOST_ADDRESS: ${{ secrets.ARTIFACT_HOST }},www.${{ secrets.ARTIFACT_HOST }}
+        USER: ${{ secrets.USER }}
+        PSWD: ${{ secrets.PSWD }}
+        HOST: ${{ secrets.HOST }}
+        ARTIFACT_SSH_KEY: ${{ secrets.ARTIFACT_SSH_KEY }}
+        DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+        DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+
