--- a/.github/workflows/reusable_deploy.yaml
+++ b/.github/workflows/reusable_deploy.yaml
@@ -6,6 +6,9 @@ on:
             container_name:
                 required: true
                 type: string
+            branch_name:
+                required: true
+                type: string
         secrets:
             PSWD:
                 required: true
@@ -36,20 +39,17 @@ jobs:
         steps:
           - name: Checkout repository
             uses: actions/checkout@v4
-          - name: Set up QEMU
-            uses: docker/setup-qemu-action@v2
-          - name: Set up Docker Buildx
-            uses: docker/setup-buildx-action@v2
-          - name: Login to Docker Hub
-            uses: docker/login-action@v2
             with:
-              username: ${{ secrets.DOCKERHUB_USERNAME }}
-              password: ${{ secrets.DOCKERHUB_TOKEN }}
-          - name: Build and push
-            uses: docker/build-push-action@v4
+                ref: ${{ inputs.branch_name }}
+          - name: DockerHub Build And Push
+            uses: Abhishek-070/Dockerhub-Build-Push@v1.0
             with:
-              push: true
-              tags: ${{ env.DOCKER_IMAGE }}
+                registry_url: 'docker.io'
+                repository_name: ${{ env.DOCKER_IMAGE }}
+                user_name: ${{ secrets.DOCKERHUB_USERNAME }}
+                password: ${{ secrets.DOCKERHUB_TOKEN }}
+                image_version: ${{ github.sha }}
+                docker_file: '.'
           - name: Set up SSH
             run: |
               env
