--- a/.github/workflows/review_app_deploy.yaml
+++ b/.github/workflows/review_app_deploy.yaml
@@ -1,20 +1,50 @@
 name: Manually deploy
 on:
-    push:
-        branches:
-            - step3-reusable-workflows
-    workflow_dispatch:
+    issue_comment:
+        types: [created]
 
 jobs:
-  deploy:
-    uses: ./.github/workflows/reusable_deploy.yaml
-    with:
-      container_name: review-app-${{ github.ref_name }}
-    secrets: 
-        HOST_ADDRESS: ${{ github.ref_name }}.${{ secrets.ARTIFACT_HOST }},www.${{ github.ref_name }}.${{ secrets.ARTIFACT_HOST }}
-        USER: ${{ secrets.USER }}
-        PSWD: ${{ secrets.PSWD }}
-        HOST: ${{ secrets.HOST }}
-        ARTIFACT_SSH_KEY: ${{ secrets.ARTIFACT_SSH_KEY }}
-        DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-        DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}       
+    check_need_deploy:
+        runs-on: ubuntu-latest
+        outputs:
+            triggered: ${{ steps.check.outputs.triggered }}
+        steps:
+            - uses: shanegenschaw/pull-request-comment-trigger@v2.1.0
+              id: check
+              with:
+                  trigger: '/deploy'
+                  reaction: rocket
+              env:
+                  GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+    get_branch_name:
+        needs: check_need_deploy
+        if: needs.check_need_deploy.outputs.triggered == 'true'
+
+        runs-on: ubuntu-latest
+        outputs:
+            ref_name: ${{ fromJson(steps.get_pull_request_ref.outputs.data).head.ref }}
+        steps:
+            - name: get pull request ref
+              id: get_pull_request_ref
+              uses: octokit/request-action@v2.x
+              with:
+                  route: GET /repos/:repository/pulls/:issue_id
+                  repository: ${{ github.repository }}
+                  issue_id: ${{ github.event.issue.number }}
+              env:
+                  GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+    deploy:
+        needs: get_branch_name
+
+        uses: ./.github/workflows/reusable_deploy.yaml
+        with:
+            container_name: review-app-${{ github.ref_name }}
+            branch_name: ${{ needs.variables.get_branch_name.branch_name }}
+        secrets:
+            HOST_ADDRESS: ${{ github.ref_name }}.${{ secrets.ARTIFACT_HOST }},www.${{ github.ref_name }}.${{ secrets.ARTIFACT_HOST }}
+            USER: ${{ secrets.USER }}
+            PSWD: ${{ secrets.PSWD }}
+            HOST: ${{ secrets.HOST }}
+            ARTIFACT_SSH_KEY: ${{ secrets.ARTIFACT_SSH_KEY }}
+            DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+            DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
