--- a/.github/workflows/review_app_deploy.yaml
+++ b/.github/workflows/review_app_deploy.yaml
@@ -1,20 +1,33 @@
 name: Manually deploy
 on:
-    push:
-        branches:
-            - step3-reusable-workflows
-    workflow_dispatch:
+    issue_comment:
+        types: [created]
 
 jobs:
-  deploy:
-    uses: ./.github/workflows/reusable_deploy.yaml
-    with:
-      container_name: review-app-${{ github.ref_name }}
-    secrets: 
-        HOST_ADDRESS: ${{ github.ref_name }}.${{ secrets.ARTIFACT_HOST }},www.${{ github.ref_name }}.${{ secrets.ARTIFACT_HOST }}
-        USER: ${{ secrets.USER }}
-        PSWD: ${{ secrets.PSWD }}
-        HOST: ${{ secrets.HOST }}
-        ARTIFACT_SSH_KEY: ${{ secrets.ARTIFACT_SSH_KEY }}
-        DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-        DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}       
+    check_need_deploy:
+        runs-on: ubuntu-latest
+        outputs:
+            triggered: ${{ steps.check.outputs.triggered }}
+        steps:
+            - uses: shanegenschaw/pull-request-comment-trigger@v2.1.0
+              id: check
+              with:
+                  trigger: '/deploy'
+                  reaction: rocket
+              env:
+                  GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+    deploy:
+        needs: check_need_deploy
+        if: needs.check_need_deploy.outputs.triggered == 'true'
+
+        uses: ./.github/workflows/reusable_deploy.yaml
+        with:
+            container_name: review-app-${{ github.ref_name }}
+        secrets:
+            HOST_ADDRESS: ${{ github.ref_name }}.${{ secrets.ARTIFACT_HOST }},www.${{ github.ref_name }}.${{ secrets.ARTIFACT_HOST }}
+            USER: ${{ secrets.USER }}
+            PSWD: ${{ secrets.PSWD }}
+            HOST: ${{ secrets.HOST }}
+            ARTIFACT_SSH_KEY: ${{ secrets.ARTIFACT_SSH_KEY }}
+            DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+            DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
